updated display font added devices plugin started overview manager

--- a/fheME/Einkaufszettel/plugin.xml
+++ b/fheME/Einkaufszettel/plugin.xml
@@ -30,6 +30,7 @@
 		<adminOnly>false</adminOnly>
 		
 		<version>0.6</version>
+		<registry>Overview;mEinkaufszettelGUI::getOverviewPlugin</registry>
 
 		<deploy>
 			<table name="Einkaufszettel" />
