--- a/fheME/Fhem/plugin.xml
+++ b/fheME/Fhem/plugin.xml
@@ -28,6 +28,7 @@
 		<version>0.6</version>
 		
 		<javascript>Fhem.js</javascript>
+		<registry>Overview;mFhemGUI::getOverviewPlugin</registry>
 
 		<deploy>
 			<table name="Fhem" />
