--- a/fheME/MailCheck/plugin.xml
+++ b/fheME/MailCheck/plugin.xml
@@ -29,6 +29,7 @@
 		<adminOnly>false</adminOnly>
 		
 		<version>0.6</version>
+		<registry>Overview;mMailCheckGUI::getOverviewPlugin</registry>
 
 		<deploy>
 			<table name="MailCheck" />
