--- a/plugins/Devices/plugin.xml
+++ b/plugins/Devices/plugin.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!-- 
- *  This file is part of lightCRM.
+ *  This file is part of phynx.
 
- *  lightCRM is free software; you can redistribute it and/or modify
+ *  phynx is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
  *  the Free Software Foundation; either version 3 of the License, or
  *  (at your option) any later version.
 
- *  lightCRM is distributed in the hope that it will be useful,
+ *  phynx is distributed in the hope that it will be useful,
  *  but WITHOUT ANY WARRANTY; without even the implied warranty of
  *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  *  GNU General Public License for more details.
@@ -15,21 +15,21 @@
  *  You should have received a copy of the GNU General Public License
  *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  * 
- *  2007 - 2012, Rainer Furtmeier - Rainer@Furtmeier.de
+ *  2007 - 2013, Rainer Furtmeier - Rainer@Furtmeier.IT
 -->
 <phynx>
 	<plugin>
-		<name>Kalender</name>
-		<menuName>Kalender</menuName>
-		<collection>mKalender</collection>
-		<javascript>Kalender.js</javascript>
-		<version>0.6</version>
+		<name>Device</name>
+		<menuName>Geräte</menuName>
+		<collection>mDevice</collection>
 		
-		<icon>./ubiquitous/Kalender/Calendar.png</icon>
-		<folder>../ubiquitous/Kalender</folder>
-		
-		<menuEntryTarget>contentLeft</menuEntryTarget>
+		<icon>./plugins/Devices/Device.png</icon>
+		<folder>Devices</folder>
 
-		<registry>Overview;mKalenderGUI::getOverviewPlugin</registry>
+		<adminOnly>false</adminOnly>
+
+		<deploy>
+			<table name="Device" />
+		</deploy>
 	</plugin>
 </phynx>
