added UPnP plugin to overview improved Wecker to restart itself if it was active before the browser was closed

--- a/fheME/UPnP/plugin.xml
+++ b/fheME/UPnP/plugin.xml
@@ -30,6 +30,7 @@
 		<javascript>UPnP.js</javascript>
 		
 		<version>0.6</version>
+		<registry>Overview;mUPnPGUI::getOverviewPlugin</registry>
 
 		<deploy>
 			<table name="UPnP" />
