--- a/ubiquitous/phim/plugin.xml
+++ b/ubiquitous/phim/plugin.xml
@@ -13,28 +13,26 @@
  *  GNU General Public License for more details.
 
  *  You should have received a copy of the GNU General Public License
- *  along with this program.  If not, see <http://www.gnu.org/licenses></http:>.
+ *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  * 
  *  2007 - 2013, Rainer Furtmeier - Rainer@Furtmeier.IT
 -->
 <phynx>
 	<plugin>
-		<name>UPnP</name>
-		<menuName>Multimedia</menuName>
-		<collection>mUPnP</collection>
+		<name>phim</name>
+		<menuName></menuName>
+		<collection>mphim</collection>
 		
-		<icon>./fheME/UPnP/UPnP.png</icon>
-		<folder>UPnP</folder>
+		<icon>./ubiquitous/phim/phim.png</icon>
+		<folder>phim</folder>
+		<javascript>phim.js</javascript>
 
 		<adminOnly>false</adminOnly>
-		<javascript>UPnP.js</javascript>
 		
-		<version>0.6</version>
-		<registry>Overview;mUPnPGUI::getOverviewPlugin</registry>
+		<version>0.1</version>
 
 		<deploy>
-			<table name="UPnP" />
-			<table name="UPnPRadioStation" />
+			<table name="phim" />
 		</deploy>
 	</plugin>
 </phynx>
