--- a/fheME/Photovoltaik/plugin.xml
+++ b/fheME/Photovoltaik/plugin.xml
@@ -29,6 +29,7 @@
 		<adminOnly>false</adminOnly>
 		
 		<version>0.6</version>
+		<registry>Overview;mWechselrichterGUI::getOverviewPlugin</registry>
 
 		<deploy>
 			<table name="Wechselrichter" />
