--- a/fheME/Heizung/plugin.xml
+++ b/fheME/Heizung/plugin.xml
@@ -29,6 +29,7 @@
 		<adminOnly>false</adminOnly>
 		
 		<version>0.6</version>
+		<registry>Overview;mHeizungGUI::getOverviewPlugin</registry>
 
 		<deploy>
 			<table name="Heizung" />
